--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@
   height: 40px;
   border: 1px solid #FFFFFF;
   border-radius: 5px;
-  background-color: RGBA(255, 255, 255, 1, 0.2);
+  background-color: RGBA(255, 255, 255, 0.2);
   padding: 12px;
   position: relative;
   z-index: 0;
@@ -245,6 +245,9 @@
   line-height: 23.12px;
   color: #6F73EE;
   cursor: pointer;
+}
+.main-button:focus {
+  outline: none;
 }
 
 /* scooter-top */
@@ -482,17 +485,18 @@
 
 /* connection */
 .connection {
-  position: relative;
   min-height: 445px;
 }
 .bg-grey {
   background-color: #F4F7FB;
   padding-top: 88px;
+  position: relative;
 }
 .client-photo {
   position: absolute;
   bottom: 0;
-  right: 160px;
+  right: 286px;
+  width: 22%;
 }
 .connection-title {
   font-family: Jost;
@@ -628,7 +632,7 @@
 
 /* footer */
 .footer {
-  margin-top: 45px;
+  padding-top: 45px;
   background-color: #F4F7FB;
 }
 .footer-top {
@@ -886,9 +890,47 @@
   flex-direction: column;
   width: 263px;
 }
-/* .input-modal {
-  width: 100%;
-} */
-/* .modal-button {
-  width: 100%;
-} */
+.input-modal {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 25px;  
+  border: 1px solid #EAEBED;
+  border-radius: 5px;
+  color: #5D6C7B;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.input-modal:focus {
+  outline: none;  
+}
+.modal-button {
+  padding: 15px 55px;
+  border: 1px solid #6F73EE;
+  border-radius: 5px;
+  background-color: #6F73EE;
+  color: #FFFFFF; 
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23.12px;
+  text-align: center;
+  margin-bottom: 16px;
+}
+.politics-modal {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 12px;
+}
+.politics-link {
+  text-decoration: none;
+  color: #6F73EE;
+}
+.connection-text {
+  width: 228px;
+  margin: 0;
+}
+.modal-image {
+  height: 497px;
+  margin-left: 69px;
+}
