--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
   width: 1110px;
   margin: auto;
 }
+.container-wrapper {
+  width: 1380px;
+  margin: auto;
+  position: relative;
+}
 .header-top-wrapper {
   display: flex;
   align-items: center;
@@ -69,7 +74,7 @@
   background-color: #6F73EE;
   border: none;
   border-radius: 5px;
-  padding: 8px 15px;
+  padding: 8px 17px;
   cursor: pointer;  
 }
 .button-text {
@@ -120,7 +125,7 @@
   background-color: #6F73EE;
   border: 1px solid #6F73EE;
   height: 100%;
-  width: 10%;
+  width: 7%;
   padding: 0;
   border-radius: 0 5px 5px 0;
   position: absolute;
@@ -129,6 +134,10 @@
   cursor: pointer;
 
   
+}
+.block-header-input {
+  display: flex;
+  gap: 35px;
 }
 .icons-group {
   display: flex;
@@ -157,12 +166,17 @@
 .main {
   color: #FFFFFF;
   margin-top: 40px;
-  padding-top: 56px;
   margin-bottom: 70px;
 
 }
-.main-image {
+.main-wrapper {
+  padding-top: 56px;
+}
+.no-webp .main-image {
   background-image: url(/img/bg.png);
+}
+.main-image {
+  background-image: url(/img/bg.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
@@ -236,7 +250,7 @@
 }
 .main-button {
   background-color: #fff;
-  padding: 15px 40.5px;
+  padding: 13px 40.5px;
   border: 1px solid #FFFFFF;
   border-radius: 5px;
   font-family: Jost;
@@ -253,7 +267,7 @@
 /* scooter-top */
 .scooter-top {
   position: relative;
-  margin-bottom: 100px;
+  margin-bottom: 135px;
   
 }
 .scooter-top-info {
@@ -273,6 +287,8 @@
   font-weight: 600;
   line-height: 50.58px;
   color: #282739;
+  margin-top: 0;
+  margin-bottom: 33px;
   
 }
 .test-drive-subtitle {
@@ -288,7 +304,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-width: 487px;
+  max-width: 490px;
+  margin-top: 17px;
 }
 .test-drive-item {
   display: flex;
@@ -308,13 +325,12 @@
 /* scooter-bot */
 .scooter-bot {
   position: relative;
-  margin-bottom: 100px;
+  margin-bottom: 127px;
 }
 .photo-scooter-bot {
   position: absolute;
   object-fit: cover;
   top: 0;
-  width: 36%;
   
 }
 .scooter-bot-wrapper {
@@ -322,7 +338,8 @@
   justify-content: flex-end;
 }
 .scooter-bot-info {
-  
+  padding-top: 29px;
+  padding-left: 25px;
   width: 660px;
 }
 .training-list {
@@ -335,7 +352,7 @@
 }
 /* product */
 .product {
-  margin-bottom: 50px;
+  margin-bottom: 101px;
 }
 .top-image {
   position: relative;
@@ -348,12 +365,13 @@
   font-family: Jost;
   font-size: 35px;
   font-weight: 600;
-  line-height: 40px;
+  line-height: 47px;
   color: #282739;
   width: 720px;
   margin: auto;
   text-align: center;
   margin-bottom: 50px;
+  text-transform: uppercase;
 }
 .product-content {
   display: flex;
@@ -374,8 +392,8 @@
   font-weight: 500;
   line-height: 17.34px;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 11px;
+  left: 9px;
 }
 .product-card {
   text-decoration: none;
@@ -384,7 +402,7 @@
 }
 
 .new {
-  padding: 4px 9px;
+  padding: 4px 7px;
   border: 1px solid #75D14A;
   border-radius: 5px;
   background-color: #75D14A;
@@ -394,8 +412,8 @@
   font-weight: 500;
   line-height: 17.34px;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 12px;
+  left: 8px;
 
 }
 
@@ -412,29 +430,31 @@
   /* flex-direction: column;
   columns: 2 auto; */
   padding-left: 0;
-  gap: 24px;
+  margin-top: 24px;
+  gap: 26px;
+  margin-bottom: 10px;
 }
 .product-bot {
   padding-left: 25px;
-  padding-right: 25px;
-  padding-bottom: 20px;
+  padding-right: 22px;
+  padding-bottom: 16px;
 }
 .product-item {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 11px;
   font-family: Roboto;
   font-size: 14px;
   font-weight: 400;
   line-height: 16.41px;
   color: #5D6C7B;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 .product-price {
   /* padding-left: 25px; */
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 14px;
 }
 .old-price {
   font-family: Jost;
@@ -450,6 +470,7 @@
   font-weight: 600;
   line-height: 28.9px;
   color: #282739;
+  word-spacing: 3px;
 }
 .price-block {
   display: flex;
@@ -460,7 +481,7 @@
   border: 1px solid #EAEBED;
   padding: 10px;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 4px;
 }
 .icon-hert {
   border: 1px solid #EAEBED;
@@ -491,12 +512,13 @@
   background-color: #F4F7FB;
   padding-top: 88px;
   position: relative;
+  padding-bottom: 78px;
 }
 .client-photo {
   position: absolute;
   bottom: 0;
-  right: 286px;
-  width: 22%;
+  right: 177px;
+  width: 30%;
 }
 .connection-title {
   font-family: Jost;
@@ -505,9 +527,10 @@
   line-height: 50.58px;
   color: #282739;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 33px;
   max-width: 632px;
   text-transform: uppercase;
+  word-spacing: -2px;
 }
 .connection-subtitle {
   font-family: Jost;
@@ -521,9 +544,9 @@
 .input-form {
   position: relative;
   display: flex;
-  flex-grow: 1;
-  flex-basis: 50%;
-  width: 263px;
+  /* flex-grow: 1;
+  flex-basis: 50%; */
+  width: 284px;
 }
 .input {
   padding-top: 15px;
@@ -561,14 +584,14 @@
   display: flex;
   height: 50px;
   width: 600px;
-  gap: 20px;
+  /* gap: 20px; */
 }
 
 .politics {
   display: flex;
-  gap: 12px;
-  width: 335px;
-  margin-top: 20px;
+  gap: 16px;
+  width: 384px;
+  margin-top: 23px;
 }
 .connection-text {
   font-family: Jost;
@@ -582,21 +605,28 @@
 }
 
 /* subscribe */
+.subscribe {
+  width: 1440px;
+  margin: auto;
+}
 .bg-blue {
   background-color: #6F73EE;
-  margin-top: 100px;
+  margin-top: 104px;
+  padding-bottom: 5px;
 }
 .subscribe-wripper {
   display: flex;
   align-items: center;
 }
 .subscribe-title {
-  width: 356px;
+  width: 518px;
   font-family: Jost;
   font-size: 18px;
   font-weight: 600;
   line-height: 26.01px;
+  margin-right: 23px;
   color: #FFFFFF;
+  text-transform: uppercase;
 }
 .subscribe-input-block {
   display: flex;
@@ -614,6 +644,9 @@
 }
 .input-email:focus {
   outline: none;
+}
+.input-email::placeholder {
+  color: #FFFFFF;
 }
 .button-subscribe {
   padding: 15px 25px;
@@ -927,7 +960,7 @@
   color: #6F73EE;
 }
 .connection-text {
-  width: 228px;
+  width: 317px;
   margin: 0;
 }
 .modal-image {
