--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ html {
   width: 69.375rem;
   margin: auto;
 }
+.navbar {
+  display: none;
+}
 .container-wrapper {
   width: 86.25rem;
   margin: auto;
@@ -1244,9 +1247,7 @@ html {
   .footer-pay .footer-pay-item:nth-child(even) {
     display: none;
   }
-  .mobile-menu.is-open {
-    display: block;
-  }
+  
   .mobile-menu {
     position: fixed;
       top: 0;
@@ -1262,6 +1263,9 @@ html {
       padding-left: 1.5rem;
       padding-right: 1.5rem;
   }
+    .mobile-menu.is-open {
+      display: block;
+    }
 
   .mobile-menu-toggle {
     width: 80px;
@@ -1271,6 +1275,61 @@ html {
     justify-content: space-between;
     padding: 28.8px;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
+  }
+  .mobile-menu-line {
+    width: 100%;
+    height: 1px;
+    background-color: black;
+    transition: transform 0.3s;
+  }
+
+  
+  .mobile-menu-line:nth-child(2) {
+    width: 80%;
+  }
+  .close-menu .mobile-menu-line:nth-child(2) {
+     display: none;
+   }
+  
+   .close-menu .mobile-menu-line:nth-child(1) {
+     transform: rotate(45deg) translateY(10px);
+  
+   }
+  
+   .close-menu .mobile-menu-line:nth-child(3) {
+     transform: rotate(-45deg) translateY(-10px);
+   }
+  
+  .navbar-button .button-text {
+    display: none;
+  }
+  
+  .navbar-button .button-icon {
+    display: block;
+    fill: #ffffff;
+  }
+  .navbar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    color: white;
+    background-color: #fff;
+    height: 5.875rem;
+    position: fixed;
+    left: 0;
+    top: 0;
+    border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+    z-index: 2;
+    transition: background-color 0.2s, height 0.2s;
+  }
+  .header {
+    display: none;
+  }
+  .header-top-wrapper {
+    display: none;
+  }
+  .main {
+    padding-top: 39px;
   }
     
 }
