--- a/css/style.css
+++ b/css/style.css
@@ -475,11 +475,25 @@ html {
   color: #5D6C7B;
   text-decoration: line-through;
 }
+.input-modal.is-invalid {
+  border: 1px solid red;
+}
+.input-email.is-invalid {
+  border: 1px solid red;
+}
 .input.is-invalid {
   border: 1px solid red;
 }
 .just-validate-error-label {
-  z-index: 3;
+  z-index: 8;
+  position: absolute;
+  top: -13px;
+  font-size: 11px;
+  left: 0;
+
+}
+.politics.just-validate-error-label {
+  position: absolute;
 }
 .new-price {
   font-family: Jost;
@@ -612,6 +626,7 @@ html {
   gap: 1rem;
   width: 24rem;
   margin-top: 1.4375rem;
+  position: absolute;
 }
 .connection-text {
   font-family: Jost;
@@ -957,11 +972,13 @@ html {
   font-weight: 400;
   line-height: 1.0837rem;
   color: #5D6C7B;
+  margin-bottom: 1.2rem;
 }
 .input-form-modal {
   display: flex;
   flex-direction: column;
   width: 16.4375rem;
+  position: relative;
 }
 .input-modal {
   padding-top: .9375rem;
@@ -970,7 +987,6 @@ html {
   border: .0625rem solid #EAEBED;
   border-radius: .3125rem;
   color: #5D6C7B;
-  margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
 .input-modal:focus {
@@ -995,6 +1011,7 @@ html {
   align-items: flex-start;
   justify-content: center;
   gap: .75rem;
+  position: relative;
 }
 .politics-link {
   text-decoration: none;
@@ -1003,6 +1020,7 @@ html {
 .connection-text {
   width: 19.8125rem;
   margin: 0;
+  font-size: 14px;
 }
 .modal-image {
   /* height: 31.0625rem; */
@@ -1115,6 +1133,9 @@ html {
   html {
     font-size: 13px;
   }
+  .connection-text {
+    font-size: 11px;
+  }
   .photo-scooter-bot {
     width: 31rem;
   }
@@ -1159,6 +1180,9 @@ html {
   }
   .header-phone-link {
     font-size: 13px;
+  }
+  .just-validate-error-label {
+    font-size: 10px;
   }
 
   .input-group {
@@ -1225,7 +1249,7 @@ html {
     display: none;
   }
   .connection-text {
-    font-size: 14px;
+    font-size: 10px;
   }
   .input {
     width: 22rem;
@@ -1626,6 +1650,9 @@ html {
   }
   .input-group-mobile {
     width: 80%;
+  }
+  .connection-text {
+    font-size: 9px;
   }
 }
 @media (max-width: 470px) {
