--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,9 @@ html {
 .product-image {
   width: 100%;
 }
+.form3 {
+  position: relative;
+}
 .product-title {
   font-family: Jost;
   font-size: 2.1875rem;
